--- a/src/assets/data/ProjectData/ProjectData.json
+++ b/src/assets/data/ProjectData/ProjectData.json
@@ -1,6 +1,93 @@
 [
 
 
+    
+    {
+        "id": 2,
+        "category": "projReactJs",
+        "name": "Jira Clone",
+        "shortDesc": "React JS Project",
+        "type": "reactjs",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "http://jiraclone.epizy.com",
+            "linkGithub": "https://github.com/xbphamvn/reactjs_jiraclone.git",
+            "date": "01 Jan, 2021",
+            "desc": [
+                "Use react higher-order components:",
+                "- Use Route and the render attribute of Route to create Global template, Login Template",
+                "- Use Formik to get value from input, the Editor value of tiny MCE",
+                "Use Axios and redux saga to communicate with Backend to handle client actions like: get all projects, login, create new project, update project detail, get comments, assign/remove members of a project…",
+                "Use localStorage (setItem, getItem) to store and get logined user data (accessToken, id, name,… etc,.), that to check user’s authorization when communicate with Backend",
+                "Use redux saga to handle state, onClick, onChange, onSubmit…",
+                "Use Ant Design to support building layout, popup, drawer... faster",
+                "Use withFormik, Yup to get input value, to validation check",
+                "React function component, React Hooks",
+                "Libraries: axios, redux saga, ant design, Formik, Yup, tiny MCE, react router DOM, Bootstrap 5.0"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                },
+                {
+                    "icon": "fab fa-js",
+                    "desc": "Javascript",
+                    "class": "overlayDetail__js"
+                },
+                {
+                    "icon": "",
+                    "desc": "JQuery",
+                    "class": "overlayDetail__jquery"
+                },
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fad fa-palette",
+                    "desc": "Ant Design",
+                    "class": "overlayDetail__antd"
+                },
+                {
+                    "icon": "fal fa-database",
+                    "desc": "Ajax (RESTful API)",
+                    "class": "overlayDetail__restapi"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/reactjs/jiraclone/jiraclone_01.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/reactjs/jiraclone/jiraclone_02.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/jiraclone/jiraclone_03.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/jiraclone/jiraclone_04.png",
+                "status": ""
+            }
+        ]
+    },
+
     {
         "id": 7,
         "category": "projReactJs",
@@ -1405,79 +1492,6 @@
         "id": 1,
         "category": "projReactJs",
         "name": "Booking Ticket Online",
-        "shortDesc": "React JS Project",
-        "type": "reactjs",
-        "classIcon": "fad fa-photo-video",
-        "detail": {
-            "linkDemo": "waiting...",
-            "linkGithub": "waiting...",
-            "date": "25 Oct, 2020",
-            "desc": [
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sed unde delectus rerum aut nulla? Est sed unde delectus rerum aut nulla?"
-            ],
-            "technology": [
-                {
-                    "icon": "fab fa-html5",
-                    "desc": "HTML",
-                    "class": "overlayDetail__html"
-                },
-                {
-                    "icon": "fab fa-css3",
-                    "desc": "CSS",
-                    "class": "overlayDetail__css"
-                },
-                {
-                    "icon": "fab fa-js",
-                    "desc": "Javascript",
-                    "class": "overlayDetail__js"
-                },
-                {
-                    "icon": "",
-                    "desc": "JQuery",
-                    "class": "overlayDetail__jquery"
-                },
-                {
-                    "icon": "fab fa-react",
-                    "desc": "React JS",
-                    "class": "overlayDetail__reactjs"
-                },
-                {
-                    "icon": "fab fa-bootstrap",
-                    "desc": "Bootstrap",
-                    "class": "overlayDetail__bootstrap"
-                },
-                {
-                    "icon": "fad fa-palette",
-                    "desc": "Ant Design",
-                    "class": "overlayDetail__antd"
-                },
-                {
-                    "icon": "fal fa-database",
-                    "desc": "Ajax (RESTful API)",
-                    "class": "overlayDetail__restapi"
-                },
-                {
-                    "icon": "fab fa-sass",
-                    "desc": "SASS",
-                    "class": "overlayDetail__sass"
-                }
-            ]
-        },
-        "gallery": [
-            {
-                "imgSrc": "/waiting.jpg",
-                "status": "active"
-            },
-            {
-                "imgSrc": "/waiting.jpg",
-                "status": "active"
-            }
-        ]
-    },
-    {
-        "id": 2,
-        "category": "projReactJs",
-        "name": "Jira Clone",
         "shortDesc": "React JS Project",
         "type": "reactjs",
         "classIcon": "fad fa-photo-video",
